feat: enhance ghost behavior and maze validation